--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
 
 
                 <div class="action__left">
+                    <div class="progress_bar">
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                        <div class="step"></div>
+                    </div>
                     <div class="form-outer">
                         <form action="#">
                             <div class="page">
@@ -126,7 +134,7 @@
                                 </div>
                             </div>
 
-                            <!-- <div class="page">
+                            <div class="page">
                                 <div class="title">
                                     <h3 class="title__head">Укажите, что нужно подключить к водоснабжению</h3>
                                     <p class="title__text">При подключении дополнительных строений от скважины
@@ -175,7 +183,7 @@
                                     <button class="field_button next" style="display: inline-block;"><span>Следующий
                                             вопрос</span><img src="img/left_row.png" alt="back"></button>
                                 </div>
-                            </div> -->
+                            </div>
 
                         </form>
                     </div>
