--- a/index.html
+++ b/index.html
@@ -412,8 +412,11 @@
                 <a href="#" class="footer__right">Политика конфиденциальности</a>
             </div>
         </footer>
-
-
+        <section class="mobile__footer">
+            <a href="#" class="button" id="active_popup">
+                <div class="main_img"><img src="img/Frame244.svg" alt="union"></div>
+            </a>
+        </section>
         <div class="popup" id="popup">
             <div class="popup__body" id="popup_body">
                 <div class="popup__content">
@@ -426,20 +429,43 @@
                         <input type="submit" value="Оформить в один клик">
                     </form>
                     <div class="popup_rules">
-                        <p class="rules_text">Нажимая на кнопку, вы принимаете <a href="#" class="rules_link"> условия
+                        <p class="rules_text">Нажимая на кнопку, вы принимаете <a href="#" class="rules_link">
+                                условия
                                 передачи данных</a>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
+        <div class="mobile_popup" id="mobile__popup">
+            <div class="mobile_popup__body" id="mobile_popup_body">
+                <div class="mobile_popup__content">
+                    <img src="img/old_man.png" alt="old_man" class="old_man">
+                    <div class="right_old_man">
+                        <h3>Осталось 5 вопросов <br> <span>Вы получите:</span></h3>
+                        <ul class="old_man_list">
+                            <li class="old_man_item"><img src="img/pig.svg" alt="pig"><span>Расчёт стоимости в трёх
+                                    вариантах</span></li>
+                            <li class="old_man_item"><img src="img/water_filter.svg" alt="filter"><span>Фильтр
+                                    глубокой очистки</span></li>
+                            <li class="old_man_item"><img src="img/map.svg" alt="map"><span>Карту глубин в вашем
+                                    районе</span></li>
+                        </ul>
+                    </div>
+                    <div class="right_well">
+                        <p class="well_text">Бурим артезианские скважины своими буровыми установками</p>
+                        <img src="img/action_right.png" alt="well">
+                    </div>
+                    <a href="#" class="continue_button" id="continue_button">Продолжить расчёт</a>
+                </div>
+            </div>
+        </div>
 
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/jquery-3.5.1.min.js"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
